fix: course search link and text overlap

--- a/lms/static/sass/_customer-specific.scss
+++ b/lms/static/sass/_customer-specific.scss
@@ -56,3 +56,7 @@ form#passwordreset-form .form-field.new_password2-new_password2 {
 .learner-achievements {
   display: none;
 }
+
+.search-results .search-results-item .result-type {
+  bottom: 50px;
+}
